# python-environment-setup

./: .gitignore  Dockerfile  README.md  pyproject.toml
my_python_playground/: __init__.py  main.py
